--- a/history.html
+++ b/history.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Drive Details</title>
+<title>History</title>
 
 <style>
 body {
@@ -10,39 +10,22 @@ body {
   padding: 20px;
   background: #f2f6ff;
 }
-h2, h3 {
+h2 {
   color: #003f88;
   text-align: center;
-  font-size: 34px;
-  font-weight: 700;
-  margin-bottom: 24px;
+  font-size: 32px;
+  margin-bottom: 20px;
 }
-
 .card {
-  padding: 18px;
   background: white;
+  padding: 18px;
   border-radius: 10px;
   box-shadow: 0 2px 6px rgba(0,0,0,0.15);
-  margin-top: 18px;
 }
-
-.grid {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  gap: 18px;
-  margin-top: 10px;
-}
-
-.label {
-  font-weight: bold;
-  color: #003f88;
-}
-
-/* CONTROLS */
 .controls {
   display: flex;
   gap: 10px;
-  margin: 10px 0;
+  margin-bottom: 10px;
 }
 .controls input {
   padding: 6px;
@@ -56,8 +39,6 @@ h2, h3 {
   border-radius: 4px;
   cursor: pointer;
 }
-
-/* TABLE */
 table {
   width: 100%;
   border-collapse: collapse;
@@ -70,140 +51,75 @@ th, td {
 th {
   background: #003f88;
   color: white;
-  position: sticky;
-  top: 0;
-}
-th:nth-child(3),
-td:nth-child(3) {
-  width: 95px;
-  white-space: nowrap;
-}
-
-/* PRINT */
-@media print {
-  .controls { display: none; }
-  body { background: white; }
 }
 </style>
 </head>
 
 <body>
 
-<h2>Drive Information</h2>
-<div id="drive">Loading drive details…</div>
-<div id="history"></div>
+<h2>History</h2>
+
+<div class="card">
+  <div class="controls">
+    <input id="search" placeholder="Search…">
+    <button onclick="exportExcel()">Export Excel</button>
+    <button onclick="window.print()">Export PDF</button>
+  </div>
+
+  <table id="historyTable">
+    <thead>
+      <tr>
+        <th>TR NO</th>
+        <th>MONTH</th>
+        <th>DATE</th>
+        <th>DETAILS OF JOB</th>
+        <th>JOB TYPE</th>
+        <th>JOB CATAGORY</th>
+        <th>CARRIED OUT BY</th>
+        <th>LINK</th>
+      </tr>
+    </thead>
+    <tbody></tbody>
+  </table>
+</div>
 
 <script>
-// ---------- DATE FORMAT (DISPLAY) ----------
-function formatDate(v) {
+const id = new URLSearchParams(location.search).get("id");
+
+// ---------- DATE PARSER (RAW VALUE ONLY) ----------
+function parseDateRaw(v) {
+  if (!v) return new Date(0);
+
+  // GViz Date(YYYY,M,D)
   if (typeof v === "string" && v.startsWith("Date(")) {
     const p = v.match(/\d+/g);
-    if (p) {
-      const y = p[0];
-      const m = String(+p[1] + 1).padStart(2, "0");
-      const d = String(p[2]).padStart(2, "0");
-      return `${d}-${m}-${y}`;
-    }
-  }
-  if (typeof v === "string" && /^\d{2}\/\d{2}\/\d{4}$/.test(v)) {
-    return v.replace(/\//g, "-");
-  }
-  return v ?? "";
-}
-
-// ---------- DATE PARSER (FOR SORTING) ----------
-function parseDate(v) {
-
-  // Date(YYYY,M,D)
-  if (typeof v === "string" && v.startsWith("Date(")) {
-    const p = v.match(/\d+/g);
-    if (p) return new Date(p[0], p[1], p[2]);
+    return new Date(p[0], p[1], p[2]);
   }
 
   // DD/MM/YYYY
-  if (typeof v === "string" && /^\d{2}\/\d{2}\/\d{4}$/.test(v)) {
-    const [d, m, y] = v.split("/");
+  if (/^\d{2}\/\d{2}\/\d{4}$/.test(v)) {
+    const [d,m,y] = v.split("/");
     return new Date(y, m - 1, d);
   }
 
-  // DD-MM-YYYY  ✅ FIX
-  if (typeof v === "string" && /^\d{2}-\d{2}-\d{4}$/.test(v)) {
-    const [d, m, y] = v.split("-");
+  // DD-MM-YYYY
+  if (/^\d{2}-\d{2}-\d{4}$/.test(v)) {
+    const [d,m,y] = v.split("-");
     return new Date(y, m - 1, d);
   }
 
   return new Date(0);
 }
 
-// ---------- LOAD DRIVE ----------
-async function loadDrive() {
-  const id = new URLSearchParams(location.search).get("id");
-  if (!id) return;
-
-  const url =
-    "https://docs.google.com/spreadsheets/d/1Ar9-a9u4b622-6i8b889qGqENI8rl8Q2U6PPOPBaLDc/gviz/tq" +
-    "?gid=1274719919&tqx=out:json";
-
-  const r = await fetch(url);
-  const t = await r.text();
-  const j = JSON.parse(t.substring(47, t.length - 2));
-
-  let m = null;
-
-  j.table.rows.forEach(r => {
-    const c = r.c || [];
-    if (`${c[1]?.v}-${c[2]?.v}`.toUpperCase() !== id.toUpperCase()) return;
-
-    m = {
-      BAT: c[1]?.v,
-      EQP: c[2]?.v,
-      pumpType: c[4]?.v,
-      ratings: c[5]?.v,
-      flc: c[10]?.v,
-      sfu: c[14]?.v,
-      fuse: c[15]?.v,
-      contactor: c[16]?.v,
-      relay: c[17]?.v,
-      ctM: c[18]?.v,
-      ctP: c[19]?.v,
-      aux: c[20]?.v
-    };
-  });
-
-  if (!m) return;
-
-  document.getElementById("drive").innerHTML = `
-    <div class="card">
-      <h3>${m.BAT} – ${m.EQP}</h3>
-      <p><span class="label">Pump Type:</span> ${m.pumpType}</p>
-
-      <div class="grid">
-        <div>
-          <p><span class="label">Ratings:</span> ${m.ratings}</p>
-          <p><span class="label">FLC:</span> ${m.flc}</p>
-        </div>
-        <div>
-          <p><span class="label">SFU:</span> ${m.sfu}</p>
-          <p><span class="label">Fuse:</span> ${m.fuse}</p>
-          <p><span class="label">Contactor:</span> ${m.contactor}</p>
-          <p><span class="label">Relay:</span> ${m.relay}</p>
-        </div>
-        <div>
-          <p><span class="label">CT (M):</span> ${m.ctM}</p>
-          <p><span class="label">CT (P):</span> ${m.ctP}</p>
-          <p><span class="label">Aux Contactor:</span> ${m.aux}</p>
-        </div>
-      </div>
-    </div>
-  `;
-
-  loadHistory(id);
+// ---------- FORMAT DATE FOR DISPLAY ----------
+function formatDate(v) {
+  const d = parseDateRaw(v);
+  if (isNaN(d)) return v;
+  return `${String(d.getDate()).padStart(2,"0")}-${String(d.getMonth()+1).padStart(2,"0")}-${d.getFullYear()}`;
 }
 
 // ---------- LOAD HISTORY ----------
-async function loadHistory(id) {
-  const out = document.getElementById("history");
-
+async function loadHistory() {
   const url =
     "https://docs.google.com/spreadsheets/d/1Ar9-a9u4b622-6i8b889qGqENI8rl8Q2U6PPOPBaLDc/gviz/tq" +
     "?gid=751880096&tqx=out:json";
@@ -212,61 +128,40 @@ async function loadHistory(id) {
   const t = await r.text();
   const j = JSON.parse(t.substring(47, t.length - 2));
 
-  const rows = j.table.rows;
-  const cols = j.table.cols;
-  const showCols = [0,1,4,5,6,7,9,10]; // A,B,E,F,G,H,J,K
+  let rows = [];
 
-  let data = [];
-
-  rows.forEach(r => {
-    const c = r.c || [];
+  j.table.rows.forEach(row => {
+    const c = row.c || [];
     if (`${c[2]?.v}-${c[3]?.v}`.toUpperCase() !== id.toUpperCase()) return;
-    data.push(c);
+    rows.push(c);
   });
 
-  // ✅ SORT: LATEST → OLDEST (FIXED)
-  data.sort((a, b) => parseDate(b[2]?.v) - parseDate(a[2]?.v));
+  // ✅ CORRECT SORT: DATE COLUMN (INDEX 2)
+  rows.sort((a, b) => parseDateRaw(b[2]?.v) - parseDateRaw(a[2]?.v));
 
-  if (!data.length) {
-    out.innerHTML = "<b>No history data found.</b>";
-    return;
-  }
+  const tbody = document.querySelector("#historyTable tbody");
+  tbody.innerHTML = "";
 
-  let html = `
-  <div class="card">
-    <h3>History</h3>
-
-    <div class="controls">
-      <input id="search" placeholder="Search…">
-      <button onclick="exportExcel()">Export Excel</button>
-      <button onclick="window.print()">Export PDF</button>
-    </div>
-
-    <table id="historyTable">
-      <thead><tr>
-  `;
-
-  showCols.forEach(i => html += `<th>${cols[i].label}</th>`);
-  html += "</tr></thead><tbody>";
-
-  data.forEach(r => {
-    html += "<tr>";
-    showCols.forEach(i => {
-      let v = formatDate(r[i]?.v ?? "");
-      if (i === 10 && v) v = `<a href="${v}" target="_blank">Open</a>`;
-      html += `<td>${v}</td>`;
-    });
-    html += "</tr>";
+  rows.forEach(c => {
+    const tr = document.createElement("tr");
+    tr.innerHTML = `
+      <td>${c[0]?.v || ""}</td>
+      <td>${c[1]?.v || ""}</td>
+      <td>${formatDate(c[2]?.v)}</td>
+      <td>${c[3]?.v || ""}</td>
+      <td>${c[4]?.v || ""}</td>
+      <td>${c[5]?.v || ""}</td>
+      <td>${c[6]?.v || ""}</td>
+      <td>${c[7]?.v ? `<a href="${c[7].v}" target="_blank">Open</a>` : ""}</td>
+    `;
+    tbody.appendChild(tr);
   });
 
-  html += "</tbody></table></div>";
-  out.innerHTML = html;
-
-  document.getElementById("search").onkeyup = function() {
+  document.getElementById("search").onkeyup = function () {
     const q = this.value.toLowerCase();
-    document.querySelectorAll("#historyTable tbody tr")
-      .forEach(tr => tr.style.display =
-        tr.innerText.toLowerCase().includes(q) ? "" : "none");
+    document.querySelectorAll("#historyTable tbody tr").forEach(tr => {
+      tr.style.display = tr.innerText.toLowerCase().includes(q) ? "" : "none";
+    });
   };
 }
 
@@ -274,18 +169,15 @@ async function loadHistory(id) {
 function exportExcel() {
   let csv = [];
   document.querySelectorAll("#historyTable tr").forEach(row => {
-    csv.push([...row.children].map(td =>
-      `"${td.innerText.replace(/"/g,'""')}"`
-    ).join(","));
+    csv.push([...row.children].map(td => `"${td.innerText.replace(/"/g,'""')}"`).join(","));
   });
-
   const a = document.createElement("a");
   a.href = URL.createObjectURL(new Blob([csv.join("\n")]));
   a.download = "history.csv";
   a.click();
 }
 
-loadDrive();
+loadHistory();
 </script>
 
 </body>
