--- a/history2.html
+++ b/history2.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Drive Details</title>
+<title>Drive History</title>
 
 <style>
 body {
@@ -10,28 +10,28 @@ body {
   padding: 20px;
   background: #f2f6ff;
 }
+
 h2, h3 {
   color: #003f88;
   text-align: center;
-  font-size: 34px;   /* bigger heading */
   font-weight: 700;
-  margin-bottom: 24px;
 }
 
-  
+h2 { font-size: 34px; margin-bottom: 10px; }
+h3 { font-size: 22px; margin-bottom: 10px; }
+
 .card {
-  padding: 18px;
   background: white;
+  padding: 20px;
   border-radius: 10px;
   box-shadow: 0 2px 6px rgba(0,0,0,0.15);
-  margin-top: 18px;
+  margin-bottom: 20px;
 }
 
 .grid {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  gap: 18px;
-  margin-top: 10px;
+  gap: 16px;
 }
 
 .label {
@@ -43,7 +43,7 @@ h2, h3 {
 .controls {
   display: flex;
   gap: 10px;
-  margin: 10px 0;
+  margin-bottom: 10px;
 }
 .controls input {
   padding: 6px;
@@ -71,116 +71,112 @@ th, td {
 th {
   background: #003f88;
   color: white;
-  position: sticky;
-  top: 0;
 }
-th:nth-child(3),
-td:nth-child(3) {
-  width: 95px;
+  /* Fix DATE column width */
+#historyTable th:nth-child(3),
+#historyTable td:nth-child(3) {
+  width: 110px;
   white-space: nowrap;
+  text-align: center;
+}
+.year-row td {
+  background: #e8f0ff;
+  color: #003f88;
+  font-weight: 700;
+  text-align: center;
+  padding: 8px;
+  font-size: 15px;
 }
 
-/* PRINT */
-@media print {
-  .controls { display: none; }
-  body { background: white; }
-}
 </style>
 </head>
 
 <body>
 
 <h2>Drive Information</h2>
-<div id="drive">Loading drive details…</div>
-<div id="history"></div>
+
+<div class="card">
+  <h3 id="driveId">—</h3>
+
+  <p><span class="label">Pump Type:</span> CIRCULATION PUMP</p>
+
+  <div class="grid">
+    <div>
+      <p><span class="label">Ratings:</span> 101</p>
+      <p><span class="label">FLC:</span> 178</p>
+    </div>
+
+    <div>
+      <p><span class="label">SFU:</span> 3 KX 2530-1YD001C</p>
+      <p><span class="label">Fuse:</span> NH2,315A,3NA3 144-7Y</p>
+      <p><span class="label">Contactor:</span> 3RT12 66, Siemens</p>
+      <p><span class="label">Relay:</span> 7SJ611</p>
+    </div>
+
+    <div>
+      <p><span class="label">CT (M):</span> 300/1 ,15VA,cl-1</p>
+      <p><span class="label">CT (P):</span> 300/5 ,10VA,cl-5P10</p>
+      <p><span class="label">Aux Contactor:</span> 3TH30 22-OAOU, 2NO+2NC, 240V AC</p>
+    </div>
+  </div>
+</div>
+
+<h2>History</h2>
+
+<div class="card">
+  <div class="controls">
+    <input id="search" placeholder="Search…">
+    <button onclick="exportExcel()">Export Excel</button>
+    <button onclick="window.print()">Export PDF</button>
+  </div>
+
+  <table id="historyTable">
+    <thead>
+      <tr>
+        <th>TR NO</th>
+        <th>MONTH</th>
+        <th>DATE</th>
+        <th>DETAILS OF JOB</th>
+        <th>JOB TYPE</th>
+        <th>JOB CATEGORY</th>
+        <th>CARRIED OUT BY</th>
+        <th>LINK</th>
+      </tr>
+    </thead>
+    <tbody></tbody>
+  </table>
+</div>
 
 <script>
-// ---------- DATE FORMAT ----------
-function formatDate(v) {
+const id = new URLSearchParams(location.search).get("id");
+document.getElementById("driveId").innerText = id || "";
+
+// ---------- DATE PARSE ----------
+function parseDate(v) {
+  if (!v) return new Date(0);
+
   if (typeof v === "string" && v.startsWith("Date(")) {
     const p = v.match(/\d+/g);
-    if (p) {
-      const y = p[0];
-      const m = String(+p[1] + 1).padStart(2,"0");
-      const d = String(p[2]).padStart(2,"0");
-      return `${d}-${m}-${y}`;
-    }
+    return new Date(p[0], p[1], p[2]);
   }
   if (/^\d{2}\/\d{2}\/\d{4}$/.test(v)) {
-    return v.replace(/\//g,"-");
+    const [d,m,y] = v.split("/");
+    return new Date(y, m - 1, d);
   }
-  return v ?? "";
+  if (/^\d{2}-\d{2}-\d{4}$/.test(v)) {
+    const [d,m,y] = v.split("-");
+    return new Date(y, m - 1, d);
+  }
+  return new Date(0);
 }
 
-// ---------- LOAD DRIVE ----------
-async function loadDrive() {
-  const id = new URLSearchParams(location.search).get("id");
-  if (!id) return;
-
-  const url =
-    "https://docs.google.com/spreadsheets/d/1Ar9-a9u4b622-6i8b889qGqENI8rl8Q2U6PPOPBaLDc/gviz/tq" +
-    "?gid=1274719919&tqx=out:json";
-
-  const r = await fetch(url);
-  const t = await r.text();
-  const j = JSON.parse(t.substring(47, t.length - 2));
-
-  let m = null;
-
-  j.table.rows.forEach(r => {
-    const c = r.c || [];
-    if (`${c[1]?.v}-${c[2]?.v}`.toUpperCase() !== id.toUpperCase()) return;
-
-    m = {
-      BAT: c[1]?.v,
-      EQP: c[2]?.v,
-      pumpType: c[4]?.v,
-      ratings: c[5]?.v,
-      flc: c[10]?.v,
-      sfu: c[14]?.v,
-      fuse: c[15]?.v,
-      contactor: c[16]?.v,
-      relay: c[17]?.v,
-      ctM: c[18]?.v,
-      ctP: c[19]?.v,
-      aux: c[20]?.v
-    };
-  });
-
-  if (!m) return;
-
-  document.getElementById("drive").innerHTML = `
-    <div class="card">
-      <h3>${m.BAT} – ${m.EQP}</h3>
-      <p><span class="label">Pump Type:</span> ${m.pumpType}</p>
-
-      <div class="grid">
-        <div>
-          <p><span class="label">Ratings:</span> ${m.ratings}</p>
-          <p><span class="label">FLC:</span> ${m.flc}</p>
-        </div>
-        <div>
-          <p><span class="label">SFU:</span> ${m.sfu}</p>
-          <p><span class="label">Fuse:</span> ${m.fuse}</p>
-          <p><span class="label">Contactor:</span> ${m.contactor}</p>
-          <p><span class="label">Relay:</span> ${m.relay}</p>
-        </div>
-        <div>
-          <p><span class="label">CT (M):</span> ${m.ctM}</p>
-          <p><span class="label">CT (P):</span> ${m.ctP}</p>
-          <p><span class="label">Aux Contactor:</span> ${m.aux}</p>
-        </div>
-      </div>
-    </div>
-  `;
-
-  loadHistory(id);
+function formatDate(v) {
+  const d = parseDate(v);
+  return `${String(d.getDate()).padStart(2,"0")}-${String(d.getMonth()+1).padStart(2,"0")}-${d.getFullYear()}`;
 }
 
 // ---------- LOAD HISTORY ----------
-async function loadHistory(id) {
-  const out = document.getElementById("history");
-
+async function loadHistory() {
   const url =
     "https://docs.google.com/spreadsheets/d/1Ar9-a9u4b622-6i8b889qGqENI8rl8Q2U6PPOPBaLDc/gviz/tq" +
     "?gid=751880096&tqx=out:json";
@@ -189,53 +185,51 @@ async function loadHistory(id) {
   const t = await r.text();
   const j = JSON.parse(t.substring(47, t.length - 2));
 
-  const rows = j.table.rows;
-  const cols = j.table.cols;
-  const showCols = [0,1,4,5,6,7,9,10]; // A,B,E,F,G,H,J,K
+  let rows = [];
 
-  let data = [];
-  rows.forEach(r => {
+  j.table.rows.forEach(r => {
     const c = r.c || [];
-    if (`${c[2]?.v}-${c[3]?.v}`.toUpperCase() !== id.toUpperCase()) return;
-    data.push(c);
+    const uid = `${c[2]?.v}-${c[3]?.v}`.toUpperCase();
+    if (uid !== id?.toUpperCase()) return;
+    rows.push(c);
   });
 
-  if (!data.length) {
-    out.innerHTML = "<b>No history data found.</b>";
-    return;
+  // SORT BY DATE (Column E = index 4)
+  rows.sort((a,b) => parseDate(b[4]?.v) - parseDate(a[4]?.v));
+
+  const tbody = document.querySelector("#historyTable tbody");
+  tbody.innerHTML = "";
+
+let currentYear = "";
+
+rows.forEach(c => {
+  const d = parseDate(c[4]?.v);
+  const year = d.getFullYear();
+
+  if (year !== currentYear) {
+    currentYear = year;
+    const yr = document.createElement("tr");
+    yr.className = "year-row";
+    yr.innerHTML = `<td colspan="8">YEAR ${year}</td>`;
+    tbody.appendChild(yr);
   }
 
-  let html = `
-  <div class="card">
-    <h3>History</h3>
-
-    <div class="controls">
-      <input id="search" placeholder="Search…">
-      <button onclick="exportExcel()">Export Excel</button>
-      <button onclick="window.print()">Export PDF</button>
-    </div>
-
-    <table id="historyTable">
-      <thead><tr>
+  const tr = document.createElement("tr");
+  tr.innerHTML = `
+    <td>${c[0]?.v || ""}</td>
+    <td>${c[1]?.v || ""}</td>
+    <td>${formatDate(c[4]?.v)}</td>
+    <td>${c[5]?.v || ""}</td>
+    <td>${c[6]?.v || ""}</td>
+    <td>${c[7]?.v || ""}</td>
+    <td>${c[9]?.v || ""}</td>
+    <td>${c[10]?.v ? `<a href="${c[10].v}" target="_blank">Open</a>` : ""}</td>
   `;
+  tbody.appendChild(tr);
+});
 
-  showCols.forEach(i => html += `<th>${cols[i].label}</th>`);
-  html += "</tr></thead><tbody>";
 
-  data.forEach(r => {
-    html += "<tr>";
-    showCols.forEach(i => {
-      let v = formatDate(r[i]?.v ?? "");
-      if (i === 10 && v) v = `<a href="${v}" target="_blank">Open</a>`;
-      html += `<td>${v}</td>`;
-    });
-    html += "</tr>";
-  });
-
-  html += "</tbody></table></div>";
-  out.innerHTML = html;
-
-  document.getElementById("search").onkeyup = function() {
+  document.getElementById("search").onkeyup = function () {
     const q = this.value.toLowerCase();
     document.querySelectorAll("#historyTable tbody tr")
       .forEach(tr => tr.style.display =
@@ -251,14 +245,13 @@ function exportExcel() {
       `"${td.innerText.replace(/"/g,'""')}"`
     ).join(","));
   });
-
   const a = document.createElement("a");
   a.href = URL.createObjectURL(new Blob([csv.join("\n")]));
   a.download = "history.csv";
   a.click();
 }
 
-loadDrive();
+loadHistory();
 </script>
 
 </body>
