--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@ body {
 h2 {
   color: #003f88;
   text-align: center;
-  font-size: 34px;   /* bigger heading */
+  font-size: 34px;
   font-weight: 700;
   margin-bottom: 24px;
-}  
+}
 h3 {
   color: #003f88;
 }
@@ -68,57 +68,97 @@ button:hover {
 <div id="drive">Loading drive details…</div>
 
 <script>
-function loadDrive() {
-  const params = new URLSearchParams(window.location.search);
-  const id = params.get("id");
-
+async function loadDrive() {
+  const id = new URLSearchParams(window.location.search).get("id");
   if (!id) {
-    document.getElementById("drive").innerHTML = "No drive ID found in URL.";
+    document.getElementById("drive").innerHTML = "No drive ID found.";
     return;
   }
 
-  document.getElementById("drive").innerHTML = `
-    <div class="card">
-      <h3>${id}</h3>
+  const sheetURL =
+    "https://docs.google.com/spreadsheets/d/1Ar9-a9u4b622-6i8b889qGqENI8rl8Q2U6PPOPBaLDc/gviz/tq" +
+    "?gid=1274719919&tqx=out:json";
 
-      <p><span class="label">Pump Type:</span> CIRCULATION PUMP</p>
+  try {
+    const res = await fetch(sheetURL);
+    const txt = await res.text();
+    const json = JSON.parse(txt.substring(47, txt.length - 2));
+    const rows = json.table.rows;
 
-      <div class="grid">
-        <div>
-          <p><span class="label">Ratings:</span> 101</p>
-          <p><span class="label">FLC:</span> 178</p>
+    let m = null;
+
+    rows.forEach(r => {
+      const c = r.c || [];
+      const uid = `${c[1]?.v}-${c[2]?.v}`.toUpperCase();
+      if (uid !== id.toUpperCase()) return;
+
+      m = {
+        BAT: c[1]?.v,
+        EQP: c[2]?.v,
+        pumpType: c[4]?.v,
+        ratings: c[5]?.v,
+        flc: c[10]?.v,
+        sfu: c[14]?.v,
+        fuse: c[15]?.v,
+        contactor: c[16]?.v,
+        relay: c[17]?.v,
+        ctM: c[18]?.v,
+        ctP: c[19]?.v,
+        aux: c[20]?.v
+      };
+    });
+
+    if (!m) {
+      document.getElementById("drive").innerHTML = "Drive not found in sheet.";
+      return;
+    }
+
+    document.getElementById("drive").innerHTML = `
+      <div class="card">
+        <h3>${m.BAT} – ${m.EQP}</h3>
+
+        <p><span class="label">Pump Type:</span> ${m.pumpType}</p>
+
+        <div class="grid">
+          <div>
+            <p><span class="label">Ratings:</span> ${m.ratings} KW</p>
+            <p><span class="label">FLC:</span> ${m.flc} A</p>
+          </div>
+
+          <div>
+            <p><span class="label">SFU:</span> ${m.sfu}</p>
+            <p><span class="label">Fuse:</span> ${m.fuse}</p>
+            <p><span class="label">Contactor:</span> ${m.contactor}</p>
+            <p><span class="label">Relay:</span> ${m.relay}</p>
+          </div>
+
+          <div>
+            <p><span class="label">CT (M):</span> ${m.ctM}</p>
+            <p><span class="label">CT (P):</span> ${m.ctP}</p>
+            <p><span class="label">Aux Contactor:</span> ${m.aux}</p>
+          </div>
         </div>
 
-        <div>
-          <p><span class="label">SFU:</span> 3 KX 2530-1YD001C</p>
-          <p><span class="label">Fuse:</span> NH2,315A,3NA3 144-7Y</p>
-          <p><span class="label">Contactor:</span> 3RT12 66, Siemens</p>
-          <p><span class="label">Relay:</span> 7SJ611</p>
-        </div>
-
-        <div>
-          <p><span class="label">CT (M):</span> 300/1 ,15VA,cl-1</p>
-          <p><span class="label">CT (P):</span> 300/5 ,10VA,cl-5P10</p>
-          <p><span class="label">Aux Contactor:</span> 3TH30 22-OAOU, 2NO+2NC, 240V AC</p>
+        <div class="button-wrap">
+          <button onclick="openHistory()">View History</button>
         </div>
       </div>
+    `;
 
-      <div class="button-wrap">
-        <button onclick="openHistory()">View History</button>
-      </div>
-    </div>
-  `;
+  } catch (e) {
+    console.error(e);
+    document.getElementById("drive").innerHTML = "Error loading drive data.";
+  }
 }
 
 function openHistory() {
   const id = new URLSearchParams(window.location.search).get("id");
   if (!id) return;
-
-  const url =
+  window.open(
     "https://08electricaldata.github.io/drive-viewer/history.html?id=" +
-    encodeURIComponent(id);
-
-  window.open(url, "_blank");
+    encodeURIComponent(id),
+    "_blank"
+  );
 }
 
 loadDrive();
